--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 body {
   margin: 0;
+  overflow: hidden;
   background: #FDF7F2;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
