--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   overflow: hidden;
-  background: #FDF7F2;
+  background: #FDF7F2 !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
